force-app/main/default/objects/HP_NoteDeSatisfaction__c/HP_NoteDeSatisfaction__c.object-meta.xml
<CustomObject>
    <label>HP Note de satisfaction</label>
    <nameField>
        <displayFormat>NDS-{00000000}</displayFormat>
        <label>HP Note de satisfaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HP Notes de satisfaction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>