force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_Agent__c.field-meta.xml
<CustomField>
    <fullName>HP_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HP_Notes_de_satisfaction</relationshipName>
    <type>Lookup</type>
</CustomField>