force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_AutreCanalAcquisitionNouvFournisseur__c.field-meta.xml
<CustomField>
    <fullName>HP_AutreCanalAcquisitionNouvFournisseur__c</fullName>
    <label>Autre canal d’acquisition fournisseur</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>