force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_AutreFournisseursClientsResilies__c.field-meta.xml
<CustomField>
    <fullName>HP_AutreFournisseursClientsResilies__c</fullName>
    <label>Autre fournisseur clients résiliés</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>