force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_AutreMotifInsatisfactionHappe__c.field-meta.xml
<CustomField>
    <fullName>HP_AutreMotifInsatisfactionHappe__c</fullName>
    <label>Autre motif insatisfaction happ-e</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>