force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_AutreRaisonChangementFournisseur__c.field-meta.xml
<CustomField>
    <fullName>HP_AutreRaisonChangementFournisseur__c</fullName>
    <label>Autre raison changement fournisseur</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>