force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_CanalAcquisitionNouveauFournisseur__c.field-meta.xml
<CustomField>
    <fullName>HP_CanalAcquisitionNouveauFournisseur__c</fullName>
    <label>Canal d’acquisition fournisseur</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>