force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_Case__c.field-meta.xml
<CustomField>
    <fullName>HP_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>HP Notes de satisfaction</relationshipLabel>
    <relationshipName>HP_Notes_de_satisfaction</relationshipName>
    <type>Lookup</type>
</CustomField>