force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_client_id__c.field-meta.xml
<CustomField>
    <fullName>HP_client_id__c</fullName>
    <label>Identifiant client (ID Xdata)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>