force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_CodeEnquete__c.field-meta.xml
<CustomField>
    <fullName>HP_CodeEnquete__c</fullName>
    <label>Code Enquête</label>
    <length>255</length>
    <type>Text</type>
</CustomField>