force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_Contact__c.field-meta.xml
<CustomField>
    <fullName>HP_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HP Notes de satisfaction</relationshipLabel>
    <relationshipName>HP_Notes_de_satisfaction</relationshipName>
    <type>Lookup</type>
</CustomField>