force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_Date_creation__c.field-meta.xml
<CustomField>
    <fullName>HP_Date_creation__c</fullName>
    <label>Date de création</label>
    <type>DateTime</type>
</CustomField>