force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_EnvieChurn__c.field-meta.xml
<CustomField>
    <fullName>HP_EnvieChurn__c</fullName>
    <label>Envie de churn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>