force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_FaciliteTraitement__c.field-meta.xml
<CustomField>
    <fullName>HP_FaciliteTraitement__c</fullName>
    <label>Facilité de traitement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>