force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_FournisseursClientsResilies__c.field-meta.xml
<CustomField>
    <fullName>HP_FournisseursClientsResilies__c</fullName>
    <label>Fournisseur clients résiliés</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>