force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_ID_Souscription__c.field-meta.xml
<CustomField>
    <fullName>HP_ID_Souscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ID Souscription</label>
    <referenceTo>HP_Souscription__c</referenceTo>
    <relationshipLabel>HP Notes de satisfaction</relationshipLabel>
    <relationshipName>HP_Notes_de_satisfaction</relationshipName>
    <type>Lookup</type>
</CustomField>