force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_ID_Souscription_Digital__c.field-meta.xml
<CustomField>
    <fullName>HP_ID_Souscription_Digital__c</fullName>
    <externalId>true</externalId>
    <label>ID Souscription Digital</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>