force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_IdAvisVerifie__c.field-meta.xml
<CustomField>
    <fullName>HP_IdAvisVerifie__c</fullName>
    <label>Id Avis Vérifié</label>
    <length>255</length>
    <type>Text</type>
</CustomField>