force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_MotifContact__c.field-meta.xml
<CustomField>
    <fullName>HP_MotifContact__c</fullName>
    <label>Motif Contact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Un déménagement</fullName>
            </value>
            <value>
                <fullName>Une souscription à un contrat d’électricité et/ou de gaz</fullName>
            </value>
            <value>
                <fullName>Une souscription à un service</fullName>
            </value>
            <value>
                <fullName>Une question sur vos factures</fullName>
            </value>
            <value>
                <fullName>Une question sur vos paiements</fullName>
            </value>
            <value>
                <fullName>Une question sur votre contrat d’énergie</fullName>
            </value>
            <value>
                <fullName>Une question ou un conseil sur les offres et les services</fullName>
            </value>
            <value>
                <fullName>Un relevé de consommation</fullName>
            </value>
            <value>
                <fullName>Une urgence coupure</fullName>
            </value>
            <value>
                <fullName>Une réclamation</fullName>
            </value>
            <value>
                <fullName>Une question sur l’utilisation de l’Espace Client sur Internet</fullName>
            </value>
            <value>
                <fullName>Une question sur l’utilisation de l’application mobile</fullName>
            </value>
            <value>
                <fullName>Une résiliation</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>