force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_MotifContactAutre__c.field-meta.xml
<CustomField>
    <fullName>HP_MotifContactAutre__c</fullName>
    <label>Autre motif</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>