force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_MotifInsatisfactionHappe__c.field-meta.xml
<CustomField>
    <fullName>HP_MotifInsatisfactionHappe__c</fullName>
    <label>Motif insatisfaction happ-e</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>