force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_MoyenContact__c.field-meta.xml
<CustomField>
    <fullName>HP_MoyenContact__c</fullName>
    <label>Moyen de contact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Par e-mail via le formulaire de contact sur le site happ-e</fullName>
            </value>
            <value>
                <fullName>Par téléphone</fullName>
            </value>
            <value>
                <fullName>Par chat</fullName>
            </value>
            <value>
                <fullName>Via les réseaux sociaux (Facebook, twitter)</fullName>
            </value>
            <value>
                <fullName>Par courrier</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>