force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_MoyenContactAutre__c.field-meta.xml
<CustomField>
    <fullName>HP_MoyenContactAutre__c</fullName>
    <label>Autre moyen de contact</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>