force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_NbContactClient__c.field-meta.xml
<CustomField>
    <fullName>HP_NbContactClient__c</fullName>
    <label>Nombre de contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>