force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_Nom__c.field-meta.xml
<CustomField>
    <fullName>HP_Nom__c</fullName>
    <label>Nom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>