force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_NPS__c.field-meta.xml
<CustomField>
    <fullName>HP_NPS__c</fullName>
    <label>NPS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>