force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_Prenom__c.field-meta.xml
<CustomField>
    <fullName>HP_Prenom__c</fullName>
    <label>Prénom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>