force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_RaisonChangementFournisseur__c.field-meta.xml
<CustomField>
    <fullName>HP_RaisonChangementFournisseur__c</fullName>
    <label>Raison changement fournisseur</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>