force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_RaisonEnvieChurn__c.field-meta.xml
<CustomField>
    <fullName>HP_RaisonEnvieChurn__c</fullName>
    <label>Raison d’envie de churn</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>