force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_RaisonFaciliteTraitement__c.field-meta.xml
<CustomField>
    <fullName>HP_RaisonFaciliteTraitement__c</fullName>
    <label>Raison de la facilité de traitement</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>