force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_RaisonNote__c.field-meta.xml
<CustomField>
    <fullName>HP_RaisonNote__c</fullName>
    <label>Raison de la note</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>