force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_ReponseApportee__c.field-meta.xml
<CustomField>
    <fullName>HP_ReponseApportee__c</fullName>
    <label>Réponse apportée</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>