force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_satisfaction_canal__c.field-meta.xml
<CustomField>
    <fullName>HP_satisfaction_canal__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Téléphone</fullName>
            </value>
            <value>
                <fullName>Souscription</fullName>
            </value>
            <value>
                <fullName>MKTC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>