force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_satisfaction_date__c.field-meta.xml
<CustomField>
    <fullName>HP_satisfaction_date__c</fullName>
    <label>Date d’envoi de l&apos;enquête</label>
    <type>Date</type>
</CustomField>