force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_satisfaction_need_recall__c.field-meta.xml
<CustomField>
    <fullName>HP_satisfaction_need_recall__c</fullName>
    <label>Demande de rappel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>