force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_satisfaction_OeD__c.field-meta.xml
<CustomField>
    <fullName>HP_satisfaction_OeD__c</fullName>
    <label>Once &amp; done</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>