force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_satisfaction_recall__c.field-meta.xml
<CustomField>
    <fullName>HP_satisfaction_recall__c</fullName>
    <label>Date de rappel souhaitée</label>
    <type>DateTime</type>
</CustomField>