force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_satisfaction_resolved__c.field-meta.xml
<CustomField>
    <fullName>HP_satisfaction_resolved__c</fullName>
    <label>Résolution du problème</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>