force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_satisfaction_score__c.field-meta.xml
<CustomField>
    <fullName>HP_satisfaction_score__c</fullName>
    <label>Note de satisfaction /5</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>