force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_satisfaction_status__c.field-meta.xml
<CustomField>
    <fullName>HP_satisfaction_status__c</fullName>
    <label>Statut d’enquête</label>
    <length>255</length>
    <type>Text</type>
</CustomField>