force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_satisfaction_verbatim__c.field-meta.xml
<CustomField>
    <fullName>HP_satisfaction_verbatim__c</fullName>
    <label>Verbatim client / Commentaire</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>