force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_TECH_MediatechId__c.field-meta.xml
<CustomField>
    <fullName>HP_TECH_MediatechId__c</fullName>
    <externalId>true</externalId>
    <label>Id Mediatech</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>