force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_TECH_Report_OeD__c.field-meta.xml
<CustomField>
    <fullName>HP_TECH_Report_OeD__c</fullName>
    <formula>if(text(HP_satisfaction_OeD__c) = &apos;Oui&apos;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Once &amp; done</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>