force-app/main/default/objects/HP_NoteDeSatisfaction__c/fields/HP_TypeEnquete__c.field-meta.xml
<CustomField>
    <fullName>HP_TypeEnquete__c</fullName>
    <label>Type d’enquête</label>
    <length>255</length>
    <type>Text</type>
</CustomField>