force-app/main/default/objects/HP_NoteDeSatisfaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>HP_Contact__c</columns>
    <columns>HP_Agent__c</columns>
    <columns>HP_satisfaction_score__c</columns>
    <columns>HP_TECH_Report_OeD__c</columns>
    <columns>HP_satisfaction_verbatim__c</columns>
    <columns>HP_satisfaction_canal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>