force-app/main/default/objects/HP_NoteDeSatisfaction__c/listViews/HP_Canal_Email.listView-meta.xml
<ListView>
    <fullName>HP_Canal_Email</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>HP_Contact__c</columns>
    <columns>HP_Agent__c</columns>
    <columns>HP_satisfaction_score__c</columns>
    <columns>HP_TECH_Report_OeD__c</columns>
    <columns>HP_satisfaction_verbatim__c</columns>
    <columns>HP_satisfaction_canal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HP_satisfaction_canal__c</field>
        <operation>equals</operation>
        <value>Email</value>
    </filters>
    <label>Canal Email</label>
    <sharedTo>
        <roleAndSubordinates>HP_HAPPE</roleAndSubordinates>
    </sharedTo>
</ListView>